--- a/cart.html
+++ b/cart.html
@@ -397,9 +397,8 @@
                     </div>
 
                     <div class="border border-end-0 border-start-0 border-4 py-4">
-                        <a href="./checkout.html">
-                            <button type="button" class="btn btn-danger w-100">Tiến hành thanh toán</button>
-                        </a>
+                            <button type="button" class="btn btn-danger w-100" onclick="checkLoginBeforeCheckout()">Tiến hành thanh toán</button>
+                        
                         <p>Mã ưu đãi <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-tag-fill" viewBox="0 0 16 16">
                                 <path
